.helm/adhoc/old-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    name: voluba-old-lbe-hostname-ingress
  name: voluba-old-lbe-hostname-ingress
spec:
  rules:
  - host: voluba-linear-backend.apps.hbp.eu
    http:
      paths:
      - backend:
          service:
            name: voluba-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - voluba-linear-backend.apps.hbp.eu
    secretName: voluba-lbe-old-hostname-secret
